--- a/src/scss/destination.scss
+++ b/src/scss/destination.scss
@@ -8,6 +8,18 @@
     
     &__title {
     }
+    &__error{
+        @extend %text-4;
+        color: red($color: #FF0000);
+        border: 1px solid pink;
+        margin-bottom: 1.5rem;
+        border-radius: 30px;
+        transition: opacity 0.5s ease 0s;
+        opacity: 0;
+        &--show{
+            opacity: 1;
+        }
+    }
 
     &__image{
         flex-basis: 539px;
