--- a/src/scss/destination.scss
+++ b/src/scss/destination.scss
@@ -15,9 +15,12 @@
         margin-bottom: 1.5rem;
         border-radius: 30px;
         transition: opacity 0.5s ease 0s;
+        transition: transform 0.5s ease 0s;
         opacity: 0;
+        transform: translateY(-15%);
         &--show{
             opacity: 1;
+            transform: translateY(0%);
         }
     }
 
