--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -5,8 +5,8 @@
 @font-face {
   font-family: "icomoon";
   src: url("");
-  src: url("assets/fonts/icomoon.eot?48m9pg");
-  src: url("assets/fonts/icomoon.eot?48m9pg#iefix") format("embedded-opentype"), url("assets/fonts/icomoon.ttf?48m9pg") format("truetype"), url("assets/fonts/icomoon.woff?48m9pg") format("woff"), url("assets/fonts/icomoon.svg?48m9pg#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?48m9pg");
+  src: url("fonts/icomoon.eot?48m9pg#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?48m9pg") format("truetype"), url("fonts/icomoon.woff?48m9pg") format("woff"), url("fonts/icomoon.svg?48m9pg#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
