--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -248,8 +248,25 @@ h1, h2, h3, h4, h5, h6 {
   --transition-duration: 0.5s;
 }
 
+.error,
 .info__text {
   font-family: "Bellefair";
+}
+
+.error {
+  font-size: 2rem;
+  line-height: 115.625%; /* 37/32 */
+  letter-spacing: 0;
+}
+@media (max-width: 768px) {
+  .error {
+    font-size: calc(18px + 23.8 * (100vw - 320px) / 1440);
+  }
+}
+@media (min-width: 769px) {
+  .error {
+    font-size: calc(18px + 14 * 100vw / 1440);
+  }
 }
 
 .title {
@@ -656,5 +673,27 @@ a[class*=__link]:focus a:focus {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+}
+.error {
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 3px;
+  color: var(--white);
+  background-color: #FF0000;
+  text-align: center;
+  max-width: 32rem;
+  margin: 0 auto;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 0.75rem;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  opacity: 0;
+  -webkit-transform: translateY(-15%);
+          transform: translateY(-15%);
+}
+.error--show {
+  opacity: 1;
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
 }
 /*# sourceMappingURL=reset.css.map */
