--- a/src/scss/destination.scss
+++ b/src/scss/destination.scss
@@ -8,21 +8,14 @@
     
     &__title {
     }
-    &__error{
-        @extend %text-4;
-        color: red($color: #FF0000);
-        border: 1px solid pink;
-        margin-bottom: 1.5rem;
-        border-radius: 30px;
-        transition: opacity 0.5s ease 0s;
-        transition: transform 0.5s ease 0s;
-        opacity: 0;
-        transform: translateY(-15%);
-        &--show{
-            opacity: 1;
-            transform: translateY(0%);
+        & .error{
+            @media (max-width: 48em) {
+                margin-bottom: 2.5rem;            
+            }
+            @media (min-width: 48.0625em) {
+                margin-top: 2.5rem;            
+            }
         }
-    }
 
     &__image{
         flex-basis: 539px;
