--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -489,3 +489,23 @@ a:focus{
         @extend %text-9;
     }
 }
+.error{
+    @extend %text-4;
+    font-family: 'Barlow Condensed', sans-serif;
+    letter-spacing: 3px;
+    color: var(--white);
+    background-color: #FF0000;
+    text-align: center;
+    max-width: 32rem;
+    margin: 0 auto;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 0.75rem;
+    transition: all 0.5s ease 0s;
+    opacity: 0;
+    transform: translateY(-15%);
+    &--show{
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
