--- a/src/scss/technology.scss
+++ b/src/scss/technology.scss
@@ -10,6 +10,15 @@
     //         }
     //     }
     // }
+    & .error{
+        padding: 0.9375rem;
+        @media (max-width: 48em) {
+            margin-bottom: 2.5rem;            
+        }
+        @media (min-width: 48.0625em) {
+            margin-top: 2.5rem;            
+        }
+    }
     & .content{
         padding: 0;
         margin: 0;
